--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
         <div id="card21" class="Card" style="background-color:peachpuff"></div>
         <div id="card22" class="Card" style="background-color:papayawhip"></div>
     </div>
+    <div id="overlay">
+        <div id="CardOverlay">
+            <div class="CardFront" style="background-color:limegreen"></div>
+        </div>
+        <div id="TextOverlay">
+            <p class="CardTitle">Card Title</p>
+            <p class="CardDescription">This is the card description.</p>
+        </div>
+        <div style="display: table; margin: 0 auto;">
+            <button id="BackButton">Back</button>
+        </div>
+    </div>
     
     <div class="ButtonContainer"><button id="NextButton">Next</button></div>
     
