use images for cards and finish basic functionality

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
     <div id="overlay">
         <div id="CardOverlay">
-            <div class="CardFront" style="background-color:limegreen"></div>
+            <div id="CardFront" style="background-color:white"></div>
         </div>
         <div id="TextOverlay">
             <p class="CardTitle">Card Title</p>
@@ -45,8 +45,6 @@
             <button id="BackButton">Back</button>
         </div>
     </div>
-    
-    <div class="ButtonContainer"><button id="NextButton">Next</button></div>
     
     <script src="main.js"></script>
 </body>    
