Add card titles and descriptions

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             <div id="CardFront" style="background-color:white"></div>
         </div>
         <div id="TextOverlay">
-            <p class="CardTitle">Card Title</p>
-            <p class="CardDescription">This is the card description.</p>
+            <p id="CardTitle">Card Title</p>
+            <p id="CardDescription">This is the card description.</p>
         </div>
         <div style="display: table; margin: 0 auto;">
             <button id="BackButton">Back</button>
