Fix sizing on different resolutions, add reset cards button

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
         <div id="card21" class="Card" style="background-color:peachpuff"></div>
         <div id="card22" class="Card" style="background-color:papayawhip"></div>
     </div>
+    <div style="display: table; margin: 0 auto;">
+        <button id="ResetButton">Reset Cards</button>
+    </div>
     <div id="overlay">
         <div id="CardOverlay">
             <div id="CardFront" style="background-color:white"></div>
